2007-11-27  Wim Taymans  <wim.taymans@gmail.com>

	* plugins/elements/gstfilesink.c: (gst_file_sink_event):
	Be a bit smarter when seeking, like, don't try to do a seek when it's
	not needed. This avoids errors when the file is not seekable.
	Fixes #499771.

2007-11-26  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer-docs.sgml:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/gstreamer.types.in:
	* gst/Makefile.am:
	* gst/gst.h:
	* gst/gstpreset.c:
	* gst/gstpreset.h:
	* plugins/elements/gstqueue.c:
	  Due to popular request remove preset interface again. :-(.

2007-11-22  Stefan Kost  <ensonic@users.sf.net>

	* tools/gst-inspect.c:
	  Print 'default value' for enums and flags too.

2007-11-22  Stefan Kost  <ensonic@users.sf.net>

	* docs/random/ensonic/profiling.txt:
	  More ideas.

	* gst/gstbin.c:
	  Fix typo and give better log output.

	* gst/gstdebugutils.c:
	* gst/gstdebugutils.h:
	  More ideas, make graphs a bit smaller and fix param name in macro.

2007-11-22  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  Try harder to use the return value from fgets().

2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  For theses two fgets we handle the error below.

2007-11-21  Wim Taymans  <wim.taymans@gmail.com>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_send_event):
	Only send upstream events upstream. Fixes #498746.

2007-11-21  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: Laurent Glayal <spglegle at yahoo dot fr>

	* plugins/elements/gstidentity.c: (gst_identity_class_init),
	(gst_identity_init), (gst_identity_transform_ip),
	(gst_identity_set_property), (gst_identity_get_property):
	* plugins/elements/gstidentity.h:
	Add property to disable handoff signal emission. Fixes #498694.
	API: GstIdentity::signal-handoffs

2007-11-21  Julien Moutte  <julien@fluendo.com>

	* docs/faq/gst-uninstalled: Yet another missing library for the
	uninstalled script (fft)

2007-11-21  Jan Schmidt  <jan.schmidt@sun.com>
