@@ -311,6 +311,10 @@ GST_SECOND
 GST_MSECOND
 GST_USECOND
 GST_NSECOND
+GST_TIME_AS_SECONDS
+GST_TIME_AS_MSECONDS
+GST_TIME_AS_USECONDS
+GST_TIME_AS_NSECONDS
 GST_CLOCK_DIFF
 GST_TIMEVAL_TO_TIME
 GST_TIME_TO_TIMEVAL
